resources/network/vpc/vpc.yaml
apiVersion: ec2.aws.upbound.io/v1beta2
kind: Route
metadata:
  name: publicroute
spec:
  forProvider:
    destinationCidrBlock: 0.0.0.0/0
    region: us-east-1
    routeTableIdSelector:
      matchLabels:
        route_table: public
    gatewayIdSelector:
      matchLabels:
        internetgateway: igw1
  providerConfigRef:
    name: segoja7
---
apiVersion: ec2.aws.upbound.io/v1beta2
kind: Route
metadata:
  name: privateroute
spec:
  forProvider:
    destinationCidrBlock: 0.0.0.0/0
    region: us-east-1
    routeTableIdSelector:
      matchLabels:
        route_table: private
    natGatewayId: nat-09422a22f0ad40161 #Todo only can make reference of nat gateway using the id and not the labels.
    #You need first create the nat gateway for later create the table route.
    # I do not know in this moment if can use references as outputs in terraform for assigns attributes.
  providerConfigRef:
    name: segoja7
